--- a/Views/Order/ChooseHotel.cshtml
+++ b/Views/Order/ChooseHotel.cshtml
@@ -1,19 +1,31 @@
 ﻿@model IEnumerable<HeyHotel.Models.Hotel>
 
 <div class="flex">
-@{
-    foreach (var hotel in Model)
-    {
-        string imgWay = hotel.Location.Replace(" ","") + ".jpg";
-        <a asp-action="ChooseRoom" asp-controller="Order" asp-route-id="@hotel.Id">
-            <div class="HotelChoseDiv">
-                <div class="HotelLocation">@hotel.Location</div>
-                <div style=" background-image: url(../../photo/hotels/@imgWay); background-repeat: no-repeat; " class="HotelImageDiv">  
-                </div>
-                <div class="ChoseHotelFreeRoom">Free room:  @hotel.Rooms.Where(el => !el.IsUsing).ToList().Count </div>
-            </div>
+    @{
+        for (int i = 0; i < 5; i++)
+        {
+            foreach (var hotel in Model)
+            {
+                string imgWay = (hotel.City + hotel.Location).Replace(" ", "").Replace("\r", "").Replace("\n", "");
+                imgWay += ".jpg";
+                if (@hotel.Rooms.Where(el => !el.IsUsing).ToList().Count != 0)
+                {
+                    <a asp-action="ChooseRoom" asp-controller="Order" asp-route-id="@hotel.Id">
+                        <div class="HotelChoseDiv">
+                            <div class="HotelLocation">@hotel.Name</div>
+                            <div style=" background-image: url(../../photo/hotels/@imgWay); background-repeat: no-repeat;"
+                                 class="HotelImageDiv">
+                            </div>
+                            <div class="HotelInfoDiv">
+                                <div>City:  @hotel.City </div>
+                                <div>Adress:  @hotel.Location </div>
+                                <div>Free room:  @hotel.Rooms.Where(el => !el.IsUsing).ToList().Count </div>
+                            </div>
+                        </div>
 
-        </a>
-    }
-}
+                    </a>
+                }
+
+            }
+        } }
 </div>
