Added sorting to OrdersList

--- a/Views/Manager/OrdersList.cshtml
+++ b/Views/Manager/OrdersList.cshtml
@@ -2,15 +2,15 @@
 
 <table class="ItemListTable">
     <tr>
-      <td>Id</td>  
-      <td>Hotel Name</td>  
-      <td>Hotel Location</td>  
-      <td>User Email</td>
-      <td>Room number</td>  
-      <td>Room floor</td>  
-      <td>Total</td>  
-      <td>Is Payed</td>  
-      <td>Is Closed</td>  
+        <td>Id</td>
+        <td><a asp-action="OrdersList" asp-controller="Manager" asp-route-sortOrder="@ViewBag.HotelNameSortParm">Hotel Name</a></td> 
+        <td><a asp-action="OrdersList" asp-controller="Manager" asp-route-sortOrder="@ViewBag.HotelLocationSortParm">Hotel Location</a></td>
+        <td>User Email</td>
+        <td><a asp-action="OrdersList" asp-controller="Manager" asp-route-sortOrder="@ViewBag.RoomNumberSortParm">Room number</a></td>
+        <td>Room floor</td>
+        <td><a asp-action="OrdersList" asp-controller="Manager" asp-route-sortOrder="@ViewBag.TotalSortParm">Total</a></td>
+        <td><a asp-action="OrdersList" asp-controller="Manager" asp-route-sortOrder="@ViewBag.IsPayedSortParm">Is Payed</a></td>
+        <td><a asp-action="OrdersList" asp-controller="Manager" asp-route-sortOrder="@ViewBag.IsClosedSortParm">Is Closed</a></td>
     </tr>
     @foreach(Order order in Model.Orders)
             {
