--- a/Views/Shared/_ParentPage.cshtml
+++ b/Views/Shared/_ParentPage.cshtml
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="~/css/mainpage/HomePage.css" />
     <link rel="stylesheet" href="~/css/mainpage/OrdersStyle.css" />
     <link rel="stylesheet" href="~/css/mainpage/GeneralStyle.css" />
+    <script src="@Url.Content("~/lib/jquery/dist/jquery.min.js")"></script>
+    <script src="@Url.Content("~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.js")"></script>
 </head>
 <body>
     <header>
