--- a/wwwroot/css/mainpage/OrdersStyle.css
+++ b/wwwroot/css/mainpage/OrdersStyle.css
@@ -418,3 +418,96 @@ input[type="number"] {
     background: #FDF5E6;
     border: 4px solid #7A5E00;
 }
+
+/* Orders Of User */
+
+.OrderInfo {
+    width: 80%;
+    border: 1px solid black;
+    height: 400px;
+    position: relative;
+    margin-bottom: 20px;
+}
+
+.RoomInfoPhoto {
+    background-size: 100%;
+    width: 36%;
+    max-width: 60%;
+    margin: 1%;
+    height: auto;
+    min-height: 300px;
+    background-repeat: no-repeat;
+    opacity: 1;
+}
+
+.OrderStatuses{
+    width: 15%;
+    height: auto;
+    position: absolute;
+    top: 10px;
+    right: 10px;
+}
+
+.status {
+    width: 100%;
+    font-size: 24px;
+    border-radius: 17px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    margin-bottom: 5px;
+    border: 1px solid black;
+    text-align: center;
+    overflow: hidden;
+}
+
+.ActiveStatus {
+    background-color: #7BDCA2;
+}
+
+.NotActiveStatus {
+    background-color: #A8A8A8;
+    color: #808080;
+}
+
+.NotPaidStatus {
+    background-color: #EB6C6C;
+}
+
+
+.OrderFacts {
+    height: auto;
+    width: 23%;
+    position: absolute;
+    left: 40%;
+    top: 10px;
+    border: 1px solid black;
+    background-color: #EBD69E;
+    overflow: hidden;
+}
+
+.OrderFacts div {
+    font-family: Arial;
+    width: 100%;
+    height: auto;
+    margin: 5px;
+}
+
+.OrderActions{
+    position: absolute;
+    bottom: 10px;
+    left: 10px;
+}
+
+.OrderActions a {
+    padding: 7px 12px;
+    border: 1px solid black;
+    background-color: #EBE1C4;
+}
+
+.OrderActions a:hover {
+    cursor: pointer;
+    background-color: #EBE3CE;
+    -webkit-box-shadow: 0px 0px 13px -2px rgba(34, 60, 80, 0.6);
+    -moz-box-shadow: 0px 0px 13px -2px rgba(34, 60, 80, 0.6);
+    box-shadow: 0px 0px 13px -2px rgba(34, 60, 80, 0.6);
+}
